--- a/app/views/segments/index.html.erb
+++ b/app/views/segments/index.html.erb
@@ -21,7 +21,7 @@
       </tbody>
     </table>
 
-    <div class="links">
+    <div class="links" style="margin-left: 1rem">
       <%= link_to t('back'), contacts_path %>
       <span>|</span>
       <%= link_to t('helpers.submit.create', model: Segment.model_name.human), new_segment_path %>
