--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -2,8 +2,9 @@
   <%= form_tag contacts_path, method: :get do %>
     <div class="small-12 columns">
       <select name="segments_ids" id="segments-ids-select" data-select-two multiple="multiple" placeholder="<%= t('search') + ' ' + Segment.model_name.human(count: 2) %>">
-        <option value="1">Adulto</option>
-        <option value="2">São Paulo</option>
+        <% @segments_list.each do |segment| %>
+          <option value="<%= segment.id %>"><%= segment.name %></option>
+        <% end %>
       </select>
     </div>
     <div class="small-6 columns search-form-actions">
