--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
   <%= form_tag contacts_path, method: :get do %>
     <div class="small-12 columns">
-      <select name="segments_ids" id="segments-ids-select" data-select-two multiple="multiple" placeholder="<%= t('search') + ' ' + Segment.model_name.human(count: 2) %>">
+      <select name="segments_ids[]" id="segments-ids-select" data-select-two multiple="multiple" placeholder="<%= t('search') + ' ' + Segment.model_name.human(count: 2) %>">
         <% @segments_list.each do |segment| %>
-          <option value="<%= segment.id %>"><%= segment.name %></option>
+          <option value="<%= segment.id %>" <%= 'selected="selected"' if @search_segments.include?(segment) %>><%= segment.name %></option>
         <% end %>
       </select>
     </div>
