--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="small-12 columns">
-    <h1><%= t('new', model: Contact.model_name.human) %></h1>
+    <h1><%= t('edit', model: Contact.model_name.human) %></h1>
 
     <%= render 'form' %>
 
