--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -31,6 +31,8 @@
         <th><%= Contact.human_attribute_name(:age) %></th>
         <th><%= Contact.human_attribute_name(:email) %></th>
         <th><%= Contact.human_attribute_name(:job) %></th>
+        <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -41,6 +43,8 @@
           <td><%= contact.age %></td>
           <td><%= contact.email %></td>
           <td><%= contact.job %></td>
+          <td class="icon-cell"><%= link_to edit_contact_path(contact) do %><i class="fi-pencil"></i><% end %></td>
+          <td class="icon-cell"><%= link_to contact_path(contact), method: :delete do %><i class="fi-trash"></i><% end %></td>
         </tr>
       <% end %>
     </tbody>
